--- a/index.html
+++ b/index.html
@@ -8,33 +8,24 @@
     <title>Document</title>
   </head>
   <body>
-    <ul class="list">
-      <li class="list__item">1</li>
-      <li class="list__item">2</li>
-      <li class="list__item">3</li>
-      <li class="list__item">4</li>
-      <li class="list__item">5</li>
-      <li class="list__item">6</li>
-    </ul>
-    <ul class="list">
-      <li class="list__item">1</li>
-      <li class="list__item">2</li>
-      <li class="list__item">3</li>
-      <li class="list__item">4</li>
-      <li class="list__item">5</li>
-      <li class="list__item">6</li>
-    </ul>
-    <ul class="list">
-      <li class="list__item">1</li>
-      <li class="list__item">2</li>
-      <li class="list__item">3</li>
-    </ul>
-    <ul class="list">
-      <li class="list__item">1</li>
-      <li class="list__item">2</li>
-      <li class="list__item">3</li>
-      <li class="list__item">4</li>
-    </ul>
+    <div class="container">
+      <ul class="list">
+        <li class="list__item">1</li>
+        <li class="list__item">2</li>
+        <li class="list__item">3</li>
+        <li class="list__item">4</li>
+        <li class="list__item">5</li>
+        <li class="list__item">6</li>
+      </ul>
+      <ul class="list">
+        <li class="list__item">1</li>
+        <li class="list__item">2</li>
+        <li class="list__item">3</li>
+        <li class="list__item">4</li>
+        <li class="list__item">5</li>
+        <li class="list__item">6</li>
+      </ul>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
